[gd_scene load_steps=13 format=3 uid="uid://d4m6l6ww8tqs4"]

[ext_resource type="Script" path="res://entities/physical_button/main_button/main_button.gd" id="2_mbwbi"]
[ext_resource type="Texture2D" uid="uid://dbpo2bs141bc" path="res://entities/physical_button/main_button/the_button_shadow.png" id="3_jlvd6"]
[ext_resource type="PackedScene" uid="uid://s4t5kem7tq4r" path="res://components/clickable_component/clickable_component.tscn" id="4_k08nv"]
[ext_resource type="Texture2D" uid="uid://cpbup6pl18oej" path="res://entities/physical_button/main_button/the_button_bottom.png" id="5_pumhk"]
[ext_resource type="Texture2D" uid="uid://dnnfi0k3xxb68" path="res://entities/physical_button/main_button/the_button_top.png" id="6_6ifxq"]
[ext_resource type="AudioStream" uid="uid://cfxqqurcf2k7h" path="res://entities/physical_button/main_button/push_sound.ogg" id="6_w70bt"]
[ext_resource type="AudioStream" uid="uid://bdx52qr8j56t2" path="res://entities/physical_button/main_button/release_sound.ogg" id="7_u8eio"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sbnt8"]
radius = 180.025

[sub_resource type="Animation" id="Animation_3spmi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/TopSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/ShadowSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PressAudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ReleaseAudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_g4nt4"]
resource_name = "press"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/TopSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/ShadowSprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-6, -16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PressAudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_njfho"]
resource_name = "release"
length = 0.05
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/TopSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 24), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/ShadowSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-6, -16), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ReleaseAudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oqbwb"]
_data = {
"RESET": SubResource("Animation_3spmi"),
"press": SubResource("Animation_g4nt4"),
"release": SubResource("Animation_njfho")
}

[node name="MainButton" type="RigidBody2D"]
input_pickable = true
freeze = true
script = ExtResource("2_mbwbi")

[node name="ClickableComponent" parent="." node_paths=PackedStringArray("collision_object") instance=ExtResource("4_k08nv")]
collision_object = NodePath("..")

[node name="Sprites" type="Node2D" parent="."]

[node name="ShadowSprite" type="Sprite2D" parent="Sprites"]
texture = ExtResource("3_jlvd6")

[node name="BottomSprite" type="Sprite2D" parent="Sprites"]
texture = ExtResource("5_pumhk")

[node name="TopSprite" type="Sprite2D" parent="Sprites"]
texture = ExtResource("6_6ifxq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-6, -40)
shape = SubResource("CircleShape2D_sbnt8")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oqbwb")
}

[node name="PressAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_w70bt")
bus = &"SFX"

[node name="ReleaseAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_u8eio")
bus = &"SFX"
